# ChangeLog for dev-perl/DCOP-Amarok
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DCOP-Amarok/Attic/ChangeLog,v 1.5 2008/02/22 05:48:56 robbat2 Exp $

  22 Feb 2008; Robin H. Johnson <robbat2@gentoo.org>
  DCOP-Amarok-0.035.ebuild:
  Add ~ppc.

  01 May 2007; Markus Rothe <corsair@gentoo.org> DCOP-Amarok-0.035.ebuild:
  Added ~ppc64

  15 Mar 2007; Torsten Veller <tove@gentoo.org> DCOP-Amarok-0.035.ebuild:
  Stable on x86 (#170417). Fixed HOMEPAGE.

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  DCOP-Amarok-0.035.ebuild:
  amd64 stable

*DCOP-Amarok-0.035 (24 Oct 2006)

  24 Oct 2006; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +DCOP-Amarok-0.035.ebuild:
  Initial import, bug 152600, ebuild supplied by rbu
