@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/glib-perl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/glib-perl/ChangeLog,v 1.109 2009/08/16 08:48:37 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/glib-perl/ChangeLog,v 1.110 2009/08/25 17:28:22 robbat2 Exp $
+
+*glib-perl-1.222 (25 Aug 2009)
+
+  25 Aug 2009; Robin H. Johnson <robbat2@gentoo.org>
+  +glib-perl-1.222.ebuild:
+  Version bump via perl-bump experimental tool.
 
   16 Aug 2009; Torsten Veller <tove@gentoo.org> -files/gtypes-1.05.patch,
   -files/gtypes.patch:
