@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/DCOP-Amarok
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DCOP-Amarok/Attic/ChangeLog,v 1.5 2008/02/22 05:48:56 robbat2 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DCOP-Amarok/Attic/ChangeLog,v 1.6 2009/08/25 17:26:51 robbat2 Exp $
+
+*DCOP-Amarok-0.036 (25 Aug 2009)
+
+  25 Aug 2009; Robin H. Johnson <robbat2@gentoo.org>
+  +DCOP-Amarok-0.036.ebuild:
+  Version bump via perl-bump experimental tool.
 
   22 Feb 2008; Robin H. Johnson <robbat2@gentoo.org>
   DCOP-Amarok-0.035.ebuild:
